Fix authCallbacks argument conversion and fix WrapCB to unravel the args

--- a/examples/sendE2E/index.html
+++ b/examples/sendE2E/index.html
@@ -9,9 +9,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>xxDk WebAssembly Test</title>
+	<title>Receiver</title>
 
 	<link rel="stylesheet" type="text/css" href="../styles.css">
+	<link rel="shortcut icon" type="image/x-icon" href="receiver-favicon.ico" />
+
 	<script type="text/javascript" src="xxdk.js"></script>
 	<script type="text/javascript" src="../wasm_exec.js"></script>
 	<script>
@@ -40,6 +42,7 @@
 	</script>
 </head>
 <body>
+<h1>Receiver</h1>
 <form id="start-cmix">
 	<div>
 		<label for="ndf-input">Select NDF file to use <code>ndf</code> variable in JS (required):</label><br/>
