--- a/test/index.html
+++ b/test/index.html
@@ -12,12 +12,19 @@
 	<title>xxDk WebAssembly Test</title>
 
 	<script src="../wasm_exec.js"></script>
-	<script>
-		const go = new Go();
-		WebAssembly.instantiateStreaming(fetch("xxdk.wasm"), go.importObject).then((result) => {
-			go.run(result.instance);
-		});
-	</script>
 </head>
-<body></body>
+<body>
+<script>
+    const go = new Go();
+    let mod, inst;
+    WebAssembly.instantiateStreaming(fetch("xxdk.wasm"), go.importObject).then(async (result) => {
+        mod = result.module;
+        inst = result.instance;
+        await go.run(inst);
+        inst = await WebAssembly.instantiate(mod, go.importObject); // reset instance
+    }).catch((err) => {
+        console.error(err);
+    });
+</script>
+</body>
 </html>
